...
            Row {
                FloatingActionButton(
                    onClick = {
                        eventHandler(AddEditRecipeEvent.DeleteRecipe)
                    },
                    // TODO can we reuse the string from below?
                    modifier = Modifier.semantics { contentDescription = "Delete recipe" },
                ) {
                    Icon(imageVector = Icons.Default.Delete, contentDescription = stringResource(resource = Res.string.delete))
                }
                Spacer(modifier = Modifier.width(20.dp))
                FloatingActionButton(
                    onClick = {
                        eventHandler(AddEditRecipeEvent.SaveRecipe)
                    },
                    // TODO can we reuse the string from below?
                    modifier = Modifier.semantics { contentDescription = "Save recipe" },
                ) {
                    Icon(imageVector = Icons.Default.Done, contentDescription = stringResource(resource = Res.string.save))
                }
            }
        },
        modifier = modifier,
...
                    modifier =
                        Modifier
                            .fillMaxWidth()
                            .onFocusChanged {
                                eventHandler(AddEditRecipeEvent.ChangeTitleFocus(it))
                            }
                            .semantics { contentDescription = "Enter recipe title" },
                )
            }

            Spacer(modifier = Modifier.height(16.dp))

            Box {
...
                    modifier =
                        Modifier
                            .fillMaxWidth()
                            .onFocusChanged {
                                eventHandler(AddEditRecipeEvent.ChangeTitleFocus(it))
                            }
                            .semantics { contentDescription = "Enter recipe content" },
                )
            }
        }
    }
}

...
