...
        Spacer(modifier = Modifier.height(16.dp))

        AppTextField(
            state = serverState,
            onValueChange = { onEvent(LoginEvent.EnteredServer(it)) },
            onFocusChanged = { onEvent(LoginEvent.ChangeServerFocus(it)) },
            contentDescriptionText = "Server URI",
            textStyle = MaterialTheme.typography.headlineMedium,
            readOnly = isLoggedIn
        )

        Spacer(modifier = Modifier.height(16.dp))

        AppTextField(
            state = usernameState,
            onValueChange = { onEvent(LoginEvent.EnteredUsername(it)) },
            onFocusChanged = { onEvent(LoginEvent.ChangeUsernameFocus(it)) },
            contentDescriptionText = "User name",
            textStyle = MaterialTheme.typography.headlineMedium,
            readOnly = isLoggedIn
        )

        Spacer(modifier = Modifier.height(16.dp))

        if (isLoggedIn) {
            Button(
                onClick = { onEvent(LoginEvent.Logout) },
                modifier = Modifier.semantics { contentDescription = "Logout" }
            ) {
                Text(text = stringResource(R.string.logout))
            }
        } else {
            AppPasswordField(
                state = passwordState,
...
