...
}

class RecipeDaoImpl() : RecipeDao {
    private val recipesFlow = MutableStateFlow<List<Recipe>>(emptyList())

    init {
        // val r1 = Recipe(title = "test1", content = "content1", timestamp = 1L, id = 1)
        // val r2 = Recipe(title = "test2", content = "content2", timestamp = 1L, id = 2)
        // .value = listOf(r1, r2)
    }

    override fun getRecipes(): Flow<List<Recipe>> {
        return recipesFlow
    }
...
